<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_show_places"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/btn_show_places_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_preferences"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/action_settings"
            app:layout_constraintEnd_toEndOf="@+id/btn_show_places"
            app:layout_constraintStart_toStartOf="@+id/btn_show_places"
            app:layout_constraintTop_toBottomOf="@+id/btn_show_places" />

        <Button
            android:id="@+id/btn_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_about_txt"
            app:layout_constraintEnd_toEndOf="@+id/btn_preferences"
            app:layout_constraintStart_toStartOf="@+id/btn_preferences"
            app:layout_constraintTop_toBottomOf="@+id/btn_preferences" />

        <Button
            android:id="@+id/btn_quit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_quit_txt"
            app:layout_constraintEnd_toEndOf="@+id/btn_about"
            app:layout_constraintStart_toStartOf="@+id/btn_about"
            app:layout_constraintTop_toBottomOf="@+id/btn_about" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>